# 23-wafer-srgan-engine

./: README.md  pyproject.toml  setup_cpp.py
configs/: default.yaml
scripts/: export_onnx.py
src/wafer_srgan/: cli.py  config.py
src/wafer_srgan/cpp/: edge_ops.cpp  edge_ops.h  pybind_module.cpp
src/wafer_srgan/defect_analysis/: classifier.py  geometric_features.py  pipeline.py  segmentor.py  tensor_ops.py  vector_store.py
src/wafer_srgan/export/: ome_tiff.py
src/wafer_srgan/inference/: edge_postprocess.py  gpu_stitcher.py  memory_monitor.py  memory_pool.py  sliding_window.py  stitcher.py  stream_reader.py  triton_client.py
src/wafer_srgan/models/: builder.py  losses.py  networks.py
src/wafer_srgan/pipeline/: engine.py
src/wafer_srgan/server/: app.py
src/wafer_srgan/training/: dataset.py  trainer.py
src/wafer_srgan_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_edge.py  test_export.py  test_memory_monitor.py  test_memory_pool.py  test_models.py  test_pipeline.py
triton_model_repo/srgan_generator/: config.pbtxt
