[project]
name = "wafer-srgan-engine"
version = "0.1.0"
description = "Semiconductor wafer AOI super-resolution defect segmentation pipeline powered by SRGAN + Triton Inference Server"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "tifffile>=2023.8.0",
    "tritonclient[grpc]>=2.40.0",
    "grpcio>=1.58.0",
    "protobuf>=4.24.0",
    "flask>=3.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
wafer-srgan-train = "wafer_srgan.cli:train_entry"
wafer-srgan-infer = "wafer_srgan.cli:infer_entry"
wafer-srgan-pipeline = "wafer_srgan.cli:pipeline_entry"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
